# cicada3301

./: .gitignore  ARTICLE-DRAFT.md  AUTO_EVOLUTION.md  MASTER-ROADMAP.md  NEGATIVE-RESULTS.md  PICKUP-HERE.md  README.md  cicada_page.html  cicada_text.txt
liber-primus/: COMMUNITY-POST.md  ELIMINATION-LEDGER.md  FINDINGS-FOR-SOLVERS.md  FINDINGS.md  LP2-ANALYSIS-SUMMARY-2026.md  PAGE-MAP.md  POST-CICADASOLVERS-XVIII.md  POST-CICADASOLVERS.md  POST-LINKEDIN.md  README.md  SOLVED-PAGES-AND-INTERRUPTERS.md  SOLVERS-DOSSIER.md  attack.py  lp_try.py  pyproject.toml  tasks.py
liber-primus/analysis/: ARMADA-20-FINDINGS.md  ARTICLE.md  CAMPAIGN-X-FINDINGS.md  CAMPAIGN-XI-FINDINGS.md  CAMPAIGN-XII-FINDINGS.md  CAMPAIGN-XIII-FINDINGS.md  CAMPAIGN-XIV-FINDINGS.md  CAMPAIGN-XV-FINDINGS.md  CAMPAIGN-XVII-FINDINGS.md  CRYPTO-RIGOR.md  DEEPWEB-HASH-OSINT.md  DOUBLET-INVESTIGATION.md  KEY-HINT-RESEARCH.md  OPEN-AVENUES.md  SOLVE-ATTEMPT-FINAL.md  STATS.md  STRUCTURE-FINDINGS.md  article.html  campaign10_otp_vs_autokey.py  campaign11_pin_the_filter.py  crib_autokey.py  crypto_rigor.py  doublet_probe.py  red_team.py  run_stats.py  seek_autokey.py  seek_primes.py  structure_analysis.py
liber-primus/analysis/armada/: FINAL-VERDICT.md  FOLLOWUP-TESTS.md  attack-results.json  completeness-critic.md  recon-community-exhausted.md  recon-novel-attacks.md
liber-primus/data/: BUILD-QUADGRAMS.md  english_quadgrams.txt  fetch_sources.py
liber-primus/dataset/: build_dataset.py  liber_primus.json
liber-primus/src/lp/: score.py  (+6 more)
liber-primus/tests/: test_provenance.py  test_rig.py  validate.py
(+457 files in other folders)
